--- a/package.json
+++ b/package.json
@@ -12,13 +12,14 @@
     "faunadb": "^4.8.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.12.0",
     "vite-express": "*"
   },
   "devDependencies": {
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.10",
     "@vitejs/plugin-react": "^3.0.1",
-    "nodemon": "^2.0.20",
+    "nodemon": "^3.0.1",
     "vite": "^4.0.4"
   }
 }
